Adding community settings strings. (#228)
* Adding community settings strings.

* Adding deleted and restored community.

* Capitalize mods and tags.

* A few more strings.

* Adding appoint_mod

* Adding left_mod_team

--- a/translations/en.json
+++ b/translations/en.json
@@ -27,6 +27,7 @@
   "remove_content": "Remove Content",
   "restore_comment": "Restore comment",
   "restored_comment": "Restored comment",
+  "restored_community": "Restored community",
   "lock_comment": "Lock comment",
   "unlock_comment": "Unlock comment",
   "remove_content_more": "Remove Posts, Comments, and Communities",
@@ -37,6 +38,7 @@
   "select_a_community": "Select a Community",
   "create_community": "Create community",
   "remove_community": "Remove community",
+  "restore_community": "Restore community",
   "add_community": "Add a community",
   "explore_communities": "Explore Communities",
   "visit_random_community": "Visit a random community",
@@ -102,7 +104,7 @@
   "card": "Card",
   "small_card": "Small card",
   "mod": "mod",
-  "mods": "mods",
+  "mods": "Mods",
   "distinguish": "Speak as moderator",
   "undistinguish": "Speak as user",
   "distinguished_comment": "Distinguished comment",
@@ -113,6 +115,7 @@
   "cannot_leave_admin": "You cannot leave the server without an admin",
   "leave_admin_team": "Leave the admin team",
   "left_admin_team": "You have left the admin team",
+  "left_mod_team": "You have left the mod team",
   "profile": "Profile",
   "profile_not_logged_in_alert": "You are not logged in. If you use a Fediverse account that is able to follow users, you can follow this user.",
   "community_not_logged_in_alert": "You are not logged in. However you can subscribe from another Fediverse account, for example Lemmy or Mastodon. To do this, paste the following into the search field of your instance: <1>!{{community}}@{{instance}}</1>",
@@ -122,6 +125,7 @@
   "removed_mod": "Removed moderator",
   "removing_mod": "Removing mod",
   "appoint_as_mod": "Appoint as moderator",
+  "appoint_mod": "Appoint moderator",
   "appointing_mod": "Appointing moderator",
   "appointed_mod": "Appointed moderator",
   "appoint_as_mod_are_you_sure": "Are you sure you want to appoint {{user}} as a moderator for {{community}}?",
@@ -160,6 +164,7 @@
   "delete": "Delete",
   "deleted_post": "Deleted post",
   "deleted_comment": "Deleted comment",
+  "deleted_community": "Deleted community",
   "undelete": "Undelete",
   "undeleted_post": "Undeleted post",
   "undeleted_comment": "Undeleted comment",
@@ -198,6 +203,7 @@
   "purge_post": "Purge post",
   "purge_comment": "Purge comment",
   "purge_community": "Purge community",
+  "purge_community_with_name": "Purge {{community}}",
   "purge_user": "Purge user",
   "purge_user_with_name": "Purge {{user}}",
   "purge_warning": "Warning: Purging will delete this item, and all its children from the database. You will not be able to recover the data. Use with extreme caution.",
@@ -745,7 +751,9 @@
   "language_not_allowed": "Language not allowed",
   "edited_post": "Edited post",
   "leave_admin_team_confirmation": "Are you sure you want to leave the admin team?",
+  "leave_mod_team_confirmation": "Are you sure you want to leave the mod team?",
   "leaving_admin_team": "Leaving admin team",
+  "leaving_mod_team": "Leaving mod team",
   "torrent_help": "Lemmy can use a technology called BitTorrent to view or stream media. <1>Click here</1> to learn how.",
   "registration_for_user": "Registration for {{name}}",
   "loading_registration": "Loading registration",
@@ -892,5 +900,6 @@
   "multi_community_entry_limit_reached": "Maximum number of entries reached for multi-community",
   "too_many_requests": "Too many requests",
   "cannot_leave_mod": "Cannot leave mod",
+  "tags": "Tags",
   "active_plugins": "Active Plugins"
 }
