--- a/translations/en.json
+++ b/translations/en.json
@@ -28,6 +28,7 @@
   "restore_comment": "Restore comment",
   "restored_comment": "Restored comment",
   "restored_community": "Restored community",
+  "restored_multi_community": "Restored multi-community",
   "lock_comment": "Lock comment",
   "unlock_comment": "Unlock comment",
   "remove_content_more": "Remove Posts, Comments, and Communities",
@@ -165,6 +166,7 @@
   "deleted_post": "Deleted post",
   "deleted_comment": "Deleted comment",
   "deleted_community": "Deleted community",
+  "deleted_multi_community": "Deleted multi-community",
   "undelete": "Undelete",
   "undeleted_post": "Undeleted post",
   "undeleted_comment": "Undeleted comment",
