--- a/translations/en.json
+++ b/translations/en.json
@@ -603,6 +603,9 @@
   "couldnt_create_tagline": "Couldn't create tagline",
   "couldnt_update_tagline": "Couldn't update tagline",
   "couldnt_delete_tagline": "Couldn't delete tagline",
+  "community_tag_updated": "Community tag updated",
+  "community_tag_deleted": "Community tag deleted",
+  "community_tag_created": "Community tag created",
   "featured": "Featured",
   "featured_in_local": "Featured in Local",
   "featured_in_community": "Featured in Community",
