--- a/translations/en.json
+++ b/translations/en.json
@@ -388,6 +388,7 @@
   "body": "Body",
   "custom_thumbnail_url": "Thumbnail URL",
   "copy_suggested_title": "copy suggested title: {{title}}",
+  "suggested": "Suggested",
   "community": "Community",
   "expand_here": "Expand here",
   "subscribe_to_communities": "Subscribe to some <1>communities</1>.",
