Show SSO buttons on registration page

--- a/translations/en.json
+++ b/translations/en.json
@@ -906,5 +906,6 @@
   "summary": "Summary",
   "active_plugins": "Active Plugins",
   "community_not_federated_title": "Community not federated yet",
-  "community_not_federated_message": "Only local users are currently following this community. To get more followers, promote it across the Lemmyverse and share the identifier <1>communityName</1>. You can also use <2>lemmy-federate.com</2>."
+  "community_not_federated_message": "Only local users are currently following this community. To get more followers, promote it across the Lemmyverse and share the identifier <1>communityName</1>. You can also use <2>lemmy-federate.com</2>.",
+  "oauth_register_with_provider": "Register with SSO Provider"
 }
