Add all communities and all creators

--- a/translations/en.json
+++ b/translations/en.json
@@ -34,6 +34,7 @@
   "remove_content_more": "Remove Posts, Comments, and Communities",
   "comment_here": "Type here to comment...",
   "communities": "Communities",
+  "all_communities": "All communities",
   "users": "Users",
   "create_a_community": "Create a Community",
   "select_a_community": "Select a Community",
@@ -215,6 +216,7 @@
   "unsave": "Unsave",
   "create": "Create",
   "creator": "Creator",
+  "all_creator": "All creators",
   "username": "Username",
   "email_or_username": "Email or Username",
   "number_of_users": "{{formattedCount}} user",
