Adding all_users and all_mods

--- a/translations/en.json
+++ b/translations/en.json
@@ -36,6 +36,7 @@
   "communities": "Communities",
   "all_communities": "All communities",
   "users": "Users",
+  "all_users": "All users",
   "create_a_community": "Create a Community",
   "select_a_community": "Select a Community",
   "create_community": "Create community",
@@ -107,6 +108,7 @@
   "small_card": "Small card",
   "mod": "mod",
   "mods": "Mods",
+  "all_mods": "All mods",
   "distinguish": "Speak as moderator",
   "undistinguish": "Speak as user",
   "distinguished_comment": "Distinguished comment",
