Some modlogkind strings.

--- a/translations/en.json
+++ b/translations/en.json
@@ -138,6 +138,25 @@
   "filter_by_action": "Filter by action",
   "filter_by_mod": "Filter by mod",
   "filter_by_user": "Filter by user",
+  "removing_posts": "Removing posts",
+  "locking_posts": "Locking posts",
+  "locking_comments": "Locking comments",
+  "featuring_posts_in_community": "Featuring posts in community",
+  "featuring_posts_for_local_instance": "Featuring posts for local instance",
+  "removing_comments": "Removing comments",
+  "removing_communities": "Removing communities",
+  "banning_from_site": "Banning from site",
+  "banning_from_communities": "Banning from communities",
+  "adding_mod_to_community": "Adding mod to community",
+  "transferring_communities": "Transferring communities",
+  "changing_community_visibility": "Changing community visibility",
+  "adding_admin_to_site": "Adding admin to site",
+  "blocking_a_federated_instance": "Blocking a federated instance",
+  "allowing_a_federated_instance": "Allowing a federated instance",
+  "purging_a_person": "Purging a person",
+  "purging_a_community": "Purging a community",
+  "purging_a_post": "Purging a post",
+  "purging_a_comment": "Purging a comment",
   "admin": "admin",
   "admins": "admins",
   "remove_as_admin": "Remove as admin",
