--- a/translations/en.json
+++ b/translations/en.json
@@ -605,7 +605,7 @@
   "couldnt_create_tagline": "Couldn't create tagline",
   "couldnt_update_tagline": "Couldn't update tagline",
   "couldnt_delete_tagline": "Couldn't delete tagline",
-  "community_tag_updated": "Community tag updated",
+  "community_tag_edited": "Community tag edited",
   "community_tag_deleted": "Community tag deleted",
   "community_tag_created": "Community tag created",
   "featured": "Featured",
