--- a/translations/en.json
+++ b/translations/en.json
@@ -708,8 +708,7 @@
   "couldnt_edit_oauth_provider": "Couldn't edit OAuth provider.",
   "couldnt_delete_oauth_provider": "Couldn't delete OAuth provider.",
   "couldnt_create_oauth_provider": "Couldn't create OAuth provider.",
-  "or": "Or",
-  "oauth_login_with_provider": "Login with SSO Provider",
+  "oauth_use_external_provider": "Use external Provider",
   "oauth_authorization_invalid": "Login Authorization Failed.",
   "oauth_login_failed": "Login Failed.",
   "oauth_registration_closed": "Registration closed.",
@@ -906,6 +905,5 @@
   "summary": "Summary",
   "active_plugins": "Active Plugins",
   "community_not_federated_title": "Community not federated yet",
-  "community_not_federated_message": "Only local users are currently following this community. To get more followers, promote it across the Lemmyverse and share the identifier <1>communityName</1>. You can also use <2>lemmy-federate.com</2>.",
-  "oauth_register_with_provider": "Register with SSO Provider"
+  "community_not_federated_message": "Only local users are currently following this community. To get more followers, promote it across the Lemmyverse and share the identifier <1>communityName</1>. You can also use <2>lemmy-federate.com</2>."
 }
