Add community tag strings. (#236)
* Add community tag strings.

* Changing string to community_tag_edited

--- a/translations/en.json
+++ b/translations/en.json
@@ -605,6 +605,9 @@
   "couldnt_create_tagline": "Couldn't create tagline",
   "couldnt_update_tagline": "Couldn't update tagline",
   "couldnt_delete_tagline": "Couldn't delete tagline",
+  "community_tag_edited": "Community tag edited",
+  "community_tag_deleted": "Community tag deleted",
+  "community_tag_created": "Community tag created",
   "featured": "Featured",
   "featured_in_local": "Featured in Local",
   "featured_in_community": "Featured in Community",
