--- a/translations/en.json
+++ b/translations/en.json
@@ -711,8 +711,7 @@
   "couldnt_edit_oauth_provider": "Couldn't edit OAuth provider.",
   "couldnt_delete_oauth_provider": "Couldn't delete OAuth provider.",
   "couldnt_create_oauth_provider": "Couldn't create OAuth provider.",
-  "or": "Or",
-  "oauth_login_with_provider": "Login with SSO Provider",
+  "oauth_use_external_provider": "Use external Provider",
   "oauth_authorization_invalid": "Login Authorization Failed.",
   "oauth_login_failed": "Login Failed.",
   "oauth_registration_closed": "Registration closed.",
