Add tree for tree view.

--- a/translations/en.json
+++ b/translations/en.json
@@ -412,6 +412,7 @@
   "custom_thumbnail_url": "Thumbnail URL",
   "copy_suggested_title": "copy suggested title: {{title}}",
   "suggested": "Suggested",
+  "tree": "Tree",
   "community": "Community",
   "expand_here": "Expand here",
   "subscribe_to_communities": "Subscribe to some <1>communities</1>.",
