--- a/translations/en.json
+++ b/translations/en.json
@@ -34,7 +34,9 @@
   "remove_content_more": "Remove Posts, Comments, and Communities",
   "comment_here": "Type here to comment...",
   "communities": "Communities",
+  "all_communities": "All communities",
   "users": "Users",
+  "all_users": "All users",
   "create_a_community": "Create a Community",
   "select_a_community": "Select a Community",
   "create_community": "Create community",
@@ -106,6 +108,7 @@
   "small_card": "Small card",
   "mod": "mod",
   "mods": "Mods",
+  "all_mods": "All mods",
   "distinguish": "Speak as moderator",
   "undistinguish": "Speak as user",
   "distinguished_comment": "Distinguished comment",
@@ -135,6 +138,25 @@
   "filter_by_action": "Filter by action",
   "filter_by_mod": "Filter by mod",
   "filter_by_user": "Filter by user",
+  "removing_posts": "Removing posts",
+  "locking_posts": "Locking posts",
+  "locking_comments": "Locking comments",
+  "featuring_posts_in_community": "Featuring posts in community",
+  "featuring_posts_for_local_instance": "Featuring posts for local instance",
+  "removing_comments": "Removing comments",
+  "removing_communities": "Removing communities",
+  "banning_from_site": "Banning from site",
+  "banning_from_communities": "Banning from communities",
+  "adding_mod_to_community": "Adding mod to community",
+  "transferring_communities": "Transferring communities",
+  "changing_community_visibility": "Changing community visibility",
+  "adding_admin_to_site": "Adding admin to site",
+  "blocking_a_federated_instance": "Blocking a federated instance",
+  "allowing_a_federated_instance": "Allowing a federated instance",
+  "purging_a_person": "Purging a person",
+  "purging_a_community": "Purging a community",
+  "purging_a_post": "Purging a post",
+  "purging_a_comment": "Purging a comment",
   "admin": "admin",
   "admins": "admins",
   "remove_as_admin": "Remove as admin",
@@ -215,6 +237,7 @@
   "unsave": "Unsave",
   "create": "Create",
   "creator": "Creator",
+  "all_creators": "All creators",
   "username": "Username",
   "email_or_username": "Email or Username",
   "number_of_users": "{{formattedCount}} user",
@@ -388,6 +411,8 @@
   "body": "Body",
   "custom_thumbnail_url": "Thumbnail URL",
   "copy_suggested_title": "copy suggested title: {{title}}",
+  "suggested": "Suggested",
+  "tree": "Tree",
   "community": "Community",
   "expand_here": "Expand here",
   "subscribe_to_communities": "Subscribe to some <1>communities</1>.",
