Adding hide_read_posts

--- a/translations/en.json
+++ b/translations/en.json
@@ -83,6 +83,7 @@
   "bot_account": "Bot Account",
   "show_bot_accounts": "Show Bot Accounts",
   "show_read_posts": "Show Read Posts",
+  "hide_read_posts": "Hide read posts",
   "show_context": "Show context",
   "formatting_help": "formatting help",
   "sorting_help": "sorting help",
