--- a/translations/en.json
+++ b/translations/en.json
@@ -322,7 +322,7 @@
   "local_description": "Shows only local communities",
   "moderator_view": "Moderator view",
   "moderator_view_description": "Only show contributions from communtities you are a moderator of",
-  "read_terms_and_conditions": "I have read and agree to the following terms and conditions.",
+  "read_terms_and_conditions": "I agree to the terms and conditions.",
   "top": "Top",
   "api": "API",
   "docs": "Docs",
