Adding show unread only.

--- a/translations/en.json
+++ b/translations/en.json
@@ -333,6 +333,7 @@
   "type": "Type",
   "read": "Read",
   "unread": "Unread",
+  "show_unread_only": "Show unread only",
   "replies": "Replies",
   "x_more_replies": "{{formattedCount}} more reply",
   "x_more_replies_plural": "{{formattedCount}} more replies",
