--- a/translations/en.json
+++ b/translations/en.json
@@ -937,5 +937,7 @@
   "summary": "Summary",
   "active_plugins": "Active Plugins",
   "community_not_federated_title": "Community not federated yet",
-  "community_not_federated_message": "Only local users are currently following this community. To get more followers, promote it across the Lemmyverse and share the identifier <1>communityName</1>. You can also use <2>lemmy-federate.com</2>."
+  "community_not_federated_message": "Only local users are currently following this community. To get more followers, promote it across the Lemmyverse and share the identifier <1>communityName</1>. You can also use <2>lemmy-federate.com</2>.",
+  "dead_community_title": "Dead community",
+  "dead_community_body": "This community has not federated for more than a week. New posts and comments will probably be missing. It is likely that the instance is down or defederated."
 }
