--- a/translations/en.json
+++ b/translations/en.json
@@ -270,6 +270,7 @@
   "sort_type": "Sort type",
   "post_sort_type": "Post sort type",
   "comment_sort_type": "Comment sort type",
+  "sort": "Sort",
   "listing_type": "Listing type",
   "listing_mode": "Listing mode",
   "hot": "Hot",
@@ -334,6 +335,7 @@
   "type": "Type",
   "read": "Read",
   "unread": "Unread",
+  "show_unread_only": "Show unread only",
   "replies": "Replies",
   "x_more_replies": "{{formattedCount}} more reply",
   "x_more_replies_plural": "{{formattedCount}} more replies",
