--- a/translations/en.json
+++ b/translations/en.json
@@ -263,9 +263,11 @@
   "subscribed": "Subscribed",
   "subscribe_pending": "Subscribe Pending",
   "subscribed_description": "Shows the communities you've subscribed to",
+  "show_subscribed": "Show subscribed",
   "prev": "Prev",
   "next": "Next",
   "sidebar": "Sidebar",
+  "show_sidebar": "Show sidebar",
   "description": "Description",
   "sort_type": "Sort type",
   "post_sort_type": "Post sort type",
